[package]
name = "ch-city-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Audio"]
description = "CityHash 64/128-bit WASM bindings for browser usage"
license = "MIT"
repository = "https://github.com/maxjustus/ch-city-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
cityhash-102-rs = "0.1"
wasm-bindgen = "0.2"
